Extend e2e tests for DTOs. Fix issues with inline array objects
