# core-tests/e2e-tests/spring-rest-openapi-v3/src/main/resources/static/openapi-dto-reflective-assert.yaml
@@ -4,6 +4,34 @@ info:
   version: 1.0.0
 
 paths:
+  /items-inline:
+    post:
+      summary: Accepts an array of objects, each with numbers and labels
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                type: object
+                required: [numbers, labels]
+                properties:
+                  numbers:
+                    type: array
+                    items:
+                      type: integer
+                  labels:
+                    type: array
+                    items:
+                      type: object
+                      required: [value]
+                      properties:
+                        value:
+                          type: string
+      responses:
+        '200':
+          description: OK
   /primitiveTypes:
     post:
       summary: Example with all primitive and format types (no array/object)
